bug(home): overlap fix

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -28,7 +28,7 @@
                 left: 0;
                 width: 100%;
                 object-fit: cover;
-                z-index: 1;
+                z-index: -1;
             }
 
             .overlay {
@@ -39,18 +39,15 @@
                 height: 100%;
                 object-fit: cover;
                 background: linear-gradient(to right,rgba(10, 93, 189, .35) 13.33%,rgba(0, 0, 0, 0.12) 100%);
-                z-index: 2;
             }
 
             .content {
                 display: flex;
                 justify-content: space-between;
                 position: relative;
-                z-index: 2;
                 padding: calc(1.325rem + .75vw);
                 box-sizing: border-box;
                 color: white;
-                z-index: 3;
             }
 
             .copy {
